// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskForm Snapshots matches snapshot for edit form 1`] = `
<div>
  <form
    class="task-form space-y-6"
  >
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-title"
      >
        Title
      </label>
      <input
        class="task-form-input-title mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-title"
        required=""
        type="text"
        value="Existing Task"
      />
    </div>
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-description"
      >
        Description
      </label>
      <textarea
        class="task-form-input-description mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-description"
        required=""
        rows="4"
      >
        Existing Description
      </textarea>
    </div>
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-status"
      >
        Status
      </label>
      <select
        class="task-form-select-status mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-status"
      >
        <option
          value="PENDING"
        >
          Pending
        </option>
        <option
          value="IN_PROGRESS"
        >
          In Progress
        </option>
        <option
          value="COMPLETED"
        >
          Completed
        </option>
      </select>
    </div>
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-due-date"
      >
        Due Date
      </label>
      <input
        class="task-form-input-date mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-due-date"
        required=""
        type="date"
        value="2024-12-31"
      />
    </div>
    <div
      class="task-form-actions flex justify-end space-x-3 mt-8"
    >
      <button
        class="task-form-button-cancel px-2 py-2 text-sm font-medium text-gray-200 bg-gray-700 border border-gray-600 rounded-md hover:bg-gray-600"
        type="button"
      >
        Cancel
      </button>
      <button
        class="task-form-button-submit px-2 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md hover:bg-blue-700"
        type="submit"
      >
        Update Task
      </button>
    </div>
  </form>
</div>
`;

exports[`TaskForm Snapshots matches snapshot for empty form 1`] = `
<div>
  <form
    class="task-form space-y-6"
  >
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-title"
      >
        Title
      </label>
      <input
        class="task-form-input-title mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-title"
        required=""
        type="text"
        value=""
      />
    </div>
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-description"
      >
        Description
      </label>
      <textarea
        class="task-form-input-description mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-description"
        required=""
        rows="4"
      />
    </div>
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-status"
      >
        Status
      </label>
      <select
        class="task-form-select-status mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-status"
      >
        <option
          value="PENDING"
        >
          Pending
        </option>
        <option
          value="IN_PROGRESS"
        >
          In Progress
        </option>
        <option
          value="COMPLETED"
        >
          Completed
        </option>
      </select>
    </div>
    <div
      class="task-form-field"
    >
      <label
        class="task-form-label block text-sm font-medium text-gray-200 mb-2"
        for="task-due-date"
      >
        Due Date
      </label>
      <input
        class="task-form-input-date mt-1 block w-full rounded-md bg-gray-700 border-gray-600 text-white focus:border-blue-500 focus:ring-blue-500 px-2 py-2"
        id="task-due-date"
        required=""
        type="date"
        value="2024-11-28"
      />
    </div>
    <div
      class="task-form-actions flex justify-end space-x-3 mt-8"
    >
      <button
        class="task-form-button-cancel px-2 py-2 text-sm font-medium text-gray-200 bg-gray-700 border border-gray-600 rounded-md hover:bg-gray-600"
        type="button"
      >
        Cancel
      </button>
      <button
        class="task-form-button-submit px-2 py-2 text-sm font-medium text-white bg-blue-600 border border-transparent rounded-md hover:bg-blue-700"
        type="submit"
      >
        Add Task
      </button>
    </div>
  </form>
</div>
`;
